--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -25,7 +25,6 @@
                         </tr>
                     </thead>
                     <tbody id="leaderboard-body">
-                        <!-- Leaderboard data will be inserted here -->
                         <tr>
                             <td colspan="5">Loading leaderboard data...</td>
                         </tr>
@@ -51,13 +50,16 @@
                     leaderboardBody.appendChild(row);
                 } else {
                     data.forEach((score, index) => {
+                        const date = new Date(score.date);
+                        const dateString = isNaN(date.getTime()) ? 'Unknown' : date.toLocaleDateString();
+
                         const row = document.createElement('tr');
                         row.innerHTML = `
                             <td>${index + 1}</td>
                             <td>${score.name}</td>
                             <td>${score.time_survived}s</td>
                             <td>${score.wave}</td>
-                            <td>${new Date(score.date).toLocaleDateString()}</td>
+                            <td>${dateString}</td>
                         `;
                         leaderboardBody.appendChild(row);
                     });
