--- a/templates/index.html
+++ b/templates/index.html
@@ -80,5 +80,8 @@
             starsContainer.appendChild(star);
         }
     </script>
+
+    <img src="https://tracker-42db.onrender.com/track/project1" style="display:none;" />
+
 </body>
 </html>
